fixed layout issues for desktop

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     --darkBlue: #011638;
     --pageBackground: white;
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -52,7 +53,6 @@ body {
 .box-2 img {
     width: 100%;
     height: 100%;
-    max-height: 350px;
     object-fit: cover;
     border-radius: 0%;
     object-position: center bottom;
@@ -121,7 +121,6 @@ body {
 
 /* Main content Cards */
 .card-container img {
-    width: 250px;
     height: 400px;
     object-fit: contain;
     border-radius: 0%;
@@ -139,7 +138,7 @@ body {
     background: var(--lightBlue);
     box-shadow: 0 0 5px rgba(0,0,0,.4);
     text-align: center;
-    padding: 0px 0px 20px 0px;
+    padding: 20px 0px 20px 0px;
     border-radius: 20px;
 }
 
@@ -188,7 +187,6 @@ body {
     
     .desktop-banner3 {
         display: block;
-        max-height: 100px;
     }
     .grid-container .box-1 {
         grid-area: n;
@@ -204,6 +202,7 @@ body {
     .grid-container .box-3 {
         grid-area: m;
         padding-top: 20px;
+        margin-top: 0px !important;
     }
     
     .grid-container .box-4 {
@@ -220,8 +219,6 @@ body {
         grid-area: a;
     }
     .card-container img {
-        width: 250px;
-        height: 300px;
         object-fit: contain;
         border-radius: 0%;
     }
@@ -315,7 +312,7 @@ body {
         display: grid;
         gap: 0px !important;
     
-        grid-template-columns: 20% 3fr 1fr;
+        grid-template-columns: 175px 5fr 1fr;
         grid-template-areas: 
         "b b b"
         "s m a"
@@ -336,6 +333,7 @@ body {
     
     .grid-container .box-3 {
         grid-area: m;
+        
     }
     
     .grid-container .box-4 {
